# SAM

./: .gitignore  CMakeLists.txt  README.md  sam-config.cmake.in
doc/: Doxyfile
include/sam/: observer.hpp  option.hpp  options.hpp  system.hpp
include/sam/analysis/: henon.hpp  period.hpp  phase.hpp  savitzky_golay.hpp
include/sam/helper/: coordinate_helper.hpp
include/sam/observer/: base_observer.hpp  derivative_observer.hpp  pos_deriv_observer.hpp  position_observer.hpp
include/sam/option/: argument.hpp  argument_base.hpp  handlers.hpp
include/sam/system/: euler_system.hpp  generic_network.hpp  generic_system.hpp  rk4_network.hpp  rk4_system.hpp
include/sam/system/detail/: euler_system.hpp  rk4_system.hpp
include/sam/systems/: generic_system.hpp
test/: CMakeLists.txt  harmonic_oscillator_ode.hpp  helper.hpp  test_coordinate_helper.cpp  test_derivative_observer.cpp  test_euler_system.cpp  test_generic_network.cpp  test_generic_system.cpp  test_harmonic_oscillator_ode.cpp  test_henon.cpp  test_options.cpp  test_period.cpp  test_phase.cpp  test_pos_deriv_observer.cpp  test_position_observer.cpp  test_rk4_network.cpp  test_rk4_system.cpp  test_savitzky_golay.cpp
